Fix the existence of two levels of previewer directories in the SDK
Signed-off-by: libing3@huawei.com <libing3@huawei.com>
Change-Id: I909942d3c11abddd97e8d980410d761d036ba0ec

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -95,6 +95,6 @@ ohos_copy("previewer_copy") {
     sources = [ "//prebuilts/previewer/2.2.0.3/windows/previewer" ]
   }
   outputs = [ target_out_dir + "/previewer/{{source_file_part}}" ]
-  module_source_dir = target_out_dir + "/previewer"
+  module_source_dir = target_out_dir + "/previewer/previewer/"
   module_install_name = ""
 }
