--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -53,7 +53,7 @@
     "sass-loader": "^7.3.1",
     "source-map": "^0.7.3",
     "uglify-es": "^3.3.9",
-    "webpack": "^5.48.0",
+    "webpack": "5.48.0",
     "webpack-cli": "^4.6.0"
   },
   "babel": {
