chunn.wang@huawei.com
Signed-off-by: wangchun17 <chunn.wang@huawei.com>
Change-Id: I75ba26cb27cb0c3e0c0afbda1a447730dc3e06ba

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -37,13 +37,15 @@ action("build_ace_loader_library") {
     if (is_standard_system) {
       nodejs_path = "//prebuilts/build-tools/common/nodejs/node-v12.18.4-linux-x64/bin/node"
     } else {
-      nodejs_path = "//prebuilts/ace-toolkit/nodejs/node-v12.18.4-linux-x64/bin/node"
+      nodejs_path =
+          "//prebuilts/ace-toolkit/nodejs/node-v12.18.4-linux-x64/bin/node"
     }
   } else if (host_os == "mac") {
     if (is_standard_system) {
       nodejs_path = "//prebuilts/build-tools/common/nodejs/node-v12.18.4-darwin-x64/bin/node"
     } else {
-      nodejs_path = "//prebuilts/ace-toolkit/nodejs/node-v12.18.4-darwin-x64/bin/node"
+      nodejs_path =
+          "//prebuilts/ace-toolkit/nodejs/node-v12.18.4-darwin-x64/bin/node"
     }
   } else {
     assert(false, "Unsupported host_os: $host_os")
