--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -12,7 +12,8 @@
     "Rich"
   ],
   "scripts": {
-    "build": "",
+    "build": "./node_modules/.bin/babel ./third_party/weex-loader/src ./src --out-dir lib && node ./module-source.js ./lib && node ./uglify-source.js ./lib",
+    "richtest": "cd test/rich/testcase && webpack --config ../../../webpack.rich.config.js && mocha ../test.js",
     "rich": "cd sample/rich && webpack --config ../../webpack.rich.config.js",
     "lite": "cd sample/lite && webpack --config ../../webpack.lite.config.js",
     "card": "cd sample/card && webpack --config ../../webpack.rich.config.js",
