--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -51,6 +51,7 @@
     "resolve-bin": "^0.4.0",
     "sass": "^1.26.8",
     "sass-loader": "^7.3.1",
+    "shelljs": "^0.8.5",
     "source-map": "^0.7.3",
     "uglify-es": "^3.3.9",
     "webpack": "5.48.0",
