houhaoyu@huawei.com
update rich ut

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I76c6b683e2a4559265e4a6dbad14e42c82593468

--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -16,7 +16,8 @@
     "rich": "cd sample/rich && webpack --config ../../webpack.rich.config.js",
     "lite": "cd sample/lite && webpack --config ../../webpack.lite.config.js",
     "card": "cd sample/card && webpack --config ../../webpack.rich.config.js",
-    "postinstall": "node npm-install.js"
+    "postinstall": "node npm-install.js",
+    "richtest": "npm run build && cd test/rich/testcase && webpack --config ../../../webpack.rich.config.js && mocha ../test.js"
   },
   "devDependencies": {
     "chai": "^3.5.0",
