--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -17,7 +17,10 @@
     "lite": "cd sample/lite && webpack --config ../../webpack.lite.config.js",
     "card": "cd sample/card && webpack --config ../../webpack.rich.config.js",
     "postinstall": "node npm-install.js",
-    "richtest": "npm run build && cd test/rich/testcase && webpack --config ../../../webpack.rich.config.js && mocha ../test.js"
+    "richtest": "cd test/rich/testcase && webpack --config ../../../webpack.rich.config.js && mocha ../test.js",
+    "litetest": "cd test/lite/testcase && webpack --config ../../../webpack.lite.config.js && mocha ../test.js",
+    "cardtest": "cd test/card/testcase && webpack --env utTestForCard --config ../../../webpack.rich.config.js && mocha ../test.js",
+    "test": "npm run build && npm run richtest && npm run litetest && npm run cardtest"
   },
   "devDependencies": {
     "chai": "^3.5.0",
