yangbo198@huawei.com
Signed-off-by: yangbo <1442420648@qq.com>
Change-Id: Ie78954a5baf1cbb907678f4e192cb93d03318b95

--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -19,7 +19,7 @@
     "postinstall": "node npm-install.js",
     "richtest": "cd test/rich/testcase && webpack --config ../../../webpack.rich.config.js && mocha ../test.js",
     "litetest": "cd test/lite/testcase && webpack --config ../../../webpack.lite.config.js && mocha ../test.js",
-    "cardtest": "cd test/card/testcase && webpack --env utTestForCard --config ../../../webpack.rich.config.js && mocha ../test.js",
+    "cardtest": "cd test/card/testcase && webpack --config ../../../webpack.rich.config.js && mocha ../test.js",
     "test": "npm run build && npm run richtest && npm run litetest && npm run cardtest"
   },
   "devDependencies": {
