replace nodejs dir to current
Signed-off-by: lubinglun <lubinglun@huawei.com>
Change-Id: Iac23ec2663866643298b85ef95988c83cdb2fb6f

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -43,24 +43,7 @@ action("build_ace_loader_library") {
     _uglify_source_js,
   ]
 
-  # different host platform nodejs tool directory
-  if (host_os == "linux") {
-    if (is_standard_system) {
-      nodejs_path = "//prebuilts/build-tools/common/nodejs/node-v14.21.1-linux-x64/bin/node"
-    } else {
-      nodejs_path =
-          "//prebuilts/ace-toolkit/nodejs/node-v14.21.1-linux-x64/bin/node"
-    }
-  } else if (host_os == "mac") {
-    if (is_standard_system) {
-      nodejs_path = "//prebuilts/build-tools/common/nodejs/node-v14.21.1-darwin-x64/bin/node"
-    } else {
-      nodejs_path =
-          "//prebuilts/ace-toolkit/nodejs/node-v14.21.1-darwin-x64/bin/node"
-    }
-  } else {
-    assert(false, "Unsupported host_os: $host_os")
-  }
+  nodejs_path = "//prebuilts/build-tools/common/nodejs/current/bin/node"
 
   args = [
     "--depfile",
