fixed c3691c3 from https://gitee.com/BoJiang4702/developtools_ace-js2bundle/pulls/568 jiangbo91@huawei.com
parse5 package-lock.lson

Signed-off-by: bojiang <jiangbo91@huawei.com>
Change-Id: I66588593f22a406e3e0759588bb8c3c7606cf3db

--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -53,7 +53,7 @@
     "less-loader": "^5.0.0",
     "loader-utils": "^1.1.0",
     "md5": "^2.1.0",
-    "parse5": "^7.0.0",
+    "parse5": "7.0.0",
     "resolve-bin": "^0.4.0",
     "sass": "^1.26.8",
     "sass-loader": "^7.3.1",
