--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -25,12 +25,11 @@
     "testrunner": "cd sample/TestRunner && webpack --config ../../webpack.rich.config.js"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "eslint": "^7.3.1",
-    "eslint-config-google": "^0.14.0",
-    "mocha": "^7.1.2",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0"
+    "chai": "4.3.7",
+    "eslint": "8.33.0",
+    "lodash": "4.17.21",
+    "mocha": "10.2.0",
+    "sinon": "15.0.4"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
@@ -43,25 +42,25 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "copy-webpack-plugin": "^8.1.0",
     "css": "^3.0.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "6.7.1",
     "deccjsunit": "^1.0.8",
     "escodegen": "^2.0.0",
     "esprima": "^4.0.1",
     "hash-sum": "^1.0.2",
-    "jimp": "^0.12.1",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "loader-utils": "^1.1.0",
+    "jimp": "0.22.4",
+    "less": "4.1.3",
+    "less-loader": "11.1.0",
+    "loader-utils": "1.4.2",
     "md5": "^2.1.0",
     "parse5": "7.0.0",
-    "resolve-bin": "^0.4.0",
-    "sass": "^1.26.8",
-    "sass-loader": "^7.3.1",
+    "resolve-bin": "1.0.1",
+    "sass": "1.62.0",
+    "sass-loader": "13.2.2",
     "shelljs": "^0.8.5",
     "source-map": "^0.7.3",
     "uglify-es": "^3.3.9",
     "webpack": "5.72.1",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "5.0.2"
   },
   "babel": {
     "presets": [
