--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -56,7 +56,7 @@
     "sass-loader": "13.2.2",
     "shelljs": "^0.8.5",
     "source-map": "^0.7.3",
-    "uglify-es": "^3.3.9",
+    "uglify-js": "3.17.4",
     "webpack": "5.72.1",
     "webpack-cli": "5.0.2"
   },
