--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -32,12 +32,12 @@
     "sinon": "15.0.4"
   },
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/cli": "7.20.7",
+    "@babel/core": "7.20.12",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-transform-runtime": "7.19.6",
     "@babel/preset-env": "^7.9.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/runtime": "7.20.13",
     "babel-loader": "^8.0.6",
     "babel-plugin-require-context-hook": "^1.0.0",
     "copy-webpack-plugin": "^8.1.0",
@@ -52,8 +52,8 @@
     "resolve-bin": "1.0.1",
     "sass": "1.62.0",
     "sass-loader": "13.2.2",
-    "shelljs": "^0.8.5",
-    "source-map": "^0.7.3",
+    "shelljs": "0.8.5",
+    "source-map": "0.7.4",
     "uglify-js": "3.17.4",
     "webpack": "5.72.1",
     "webpack-cli": "5.0.2"
