jiangbo91@huawei.com
delete css add stylus

Signed-off-by: bojiang <jiangbo91@huawei.com>
Change-Id: Id123d16738bc23bfd812dee69bd7a7f73ebdd2cb

--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -41,10 +41,10 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-require-context-hook": "^1.0.0",
     "copy-webpack-plugin": "^8.1.0",
-    "css": "^3.0.0",
     "css-loader": "6.7.1",
     "deccjsunit": "^1.0.8",
     "jimp": "0.22.4",
+    "stylus": "0.57.0",
     "less": "4.1.3",
     "less-loader": "11.1.0",
     "loader-utils": "1.4.2",
