--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "chai": "4.3.7",
-    "eslint": "8.33.0",
+    "eslint": "8.34.0",
     "lodash": "4.17.21",
     "mocha": "10.2.0",
     "sinon": "15.0.4"
@@ -36,7 +36,7 @@
     "@babel/core": "7.20.12",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-transform-runtime": "7.19.6",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "7.20.2",
     "@babel/runtime": "7.20.13",
     "babel-loader": "^8.0.6",
     "babel-plugin-require-context-hook": "^1.0.0",
