--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -38,9 +38,9 @@
     "@babel/plugin-transform-runtime": "7.19.6",
     "@babel/preset-env": "7.20.2",
     "@babel/runtime": "7.20.13",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "9.1.2",
     "babel-plugin-require-context-hook": "^1.0.0",
-    "copy-webpack-plugin": "^8.1.0",
+    "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
     "deccjsunit": "^1.0.8",
     "jimp": "0.22.4",
