执行npm run test报错，lib文件里缺少style、scripter、parse
Signed-off-by: lixinnan <lixinnan1@huawei.com>
Change-Id: I2f8514eb10af97803a0f8c92b9ea7c6e64232f29

--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "buildparse5": "cd ./third_party/parse5/packages/parse5 && ./node_modules/typescript/bin/tsc --module CommonJS --target ES6 --outDir dist/cjs && cd ../../../../",
-    "build": "./node_modules/.bin/babel ./third_party/weex-loader/src ./src --out-dir lib && npm run buildparse5 && node ./module-source.js ./lib && node ./uglify-source.js ./lib",
+    "build": "./node_modules/.bin/babel ./third_party/weex-loader/src ./src --out-dir lib && npm run buildparse5 && node ./module-source.js ./lib && node ./uglify-source.js ./lib && node ./copy_deps_source.js ./lib",
     "rich": "cd sample/rich && webpack --config ../../webpack.rich.config.js",
     "lite": "cd sample/lite && webpack --config ../../webpack.lite.config.js",
     "card": "cd sample/card && webpack --config ../../webpack.rich.config.js",
