--- a/ace-loader/package.json
+++ b/ace-loader/package.json
@@ -43,7 +43,7 @@
     "css-loader": "6.7.1",
     "deccjsunit": "^1.0.8",
     "jimp": "0.22.4",
-    "css": "^3.0.0",
+    "stylus": "0.57.0",
     "less": "4.1.3",
     "less-loader": "11.1.0",
     "loader-utils": "1.4.2",
